--- a/index.html
+++ b/index.html
@@ -76,32 +76,7 @@
         </div>
       </section>
       <section class="mb-4">
-        <h2 class="mb-3">Залиште заявку</h2>
-        <form class="contact-form" method="post" action="#">
-          <div class="mb-3">
-            <label for="name" class="form-label">Ваше ім'я</label>
-            <input type="text" class="form-control" id="name" name="name" required />
-          </div>
-          <div class="mb-3">
-            <label for="phone" class="form-label">Телефон</label>
-            <input type="tel" class="form-control" id="phone" name="phone" required />
-          </div>
-          <div class="mb-3">
-            <label for="service" class="form-label">Послуга</label>
-            <select class="form-select" id="service" name="service">
-              <option value="Лазерне гравіювання">Лазерне гравіювання</option>
-              <option value="Корпоративний брендинг">Корпоративний брендинг</option>
-              <option value="Індивідуальне замовлення">Індивідуальне замовлення</option>
-              <option value="Інше">Інше</option>
-            </select>
-          </div>
-          <div class="mb-3">
-            <label for="message" class="form-label">Деталі замовлення</label>
-            <textarea class="form-control" id="message" name="message" rows="3"></textarea>
-          </div>
-          <button type="submit" class="btn btn-primary w-100">Відправити заявку</button>
-        </form>
-      </section>
+      <!-- Форма видалена за запитом -->
       <div class="footer">&copy; 2026 NEMERTI. Всі права захищені.</div>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
