Update footer section with custom styles and contact information

--- a/index.html
+++ b/index.html
@@ -77,7 +77,37 @@
       </section>
       <section class="mb-4">
       <!-- Форма видалена за запитом -->
-      <div class="footer">&copy; 2026 NEMERTI. Всі права захищені.</div>
+      <footer class="custom-footer mt-5">
+        <div class="container-fluid py-5" style="background:#333; color:#fff;">
+          <div class="row">
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h2 class="fw-bold mb-3" style="font-size:2.5rem;">Контакти</h2>
+              <p class="mb-2"><span style="color:#ff9800;font-size:1.5rem;vertical-align:middle;">&#x1F4CD;</span> Головний офіс:<br>Київ, 02092, вул. О. Довбуша, 37</p>
+              <p class="mb-2"><span style="color:#ff9800;font-size:1.5rem;vertical-align:middle;">&#x1F4DE;</span> (096) 500-1111 &nbsp; (099) 500-1111<br>(044) 500-1111</p>
+            </div>
+            <div class="col-md-4 mb-4 mb-md-0">
+              <h2 class="fw-bold mb-3" style="font-size:2.5rem;">Корисні посилання</h2>
+              <ul class="list-unstyled" style="font-size:1.25rem;">
+                <li><a href="#" style="color:#ff9800;text-decoration:none;">Про компанію</a></li>
+                <li><a href="#" style="color:#ff9800;text-decoration:none;">Документи</a></li>
+                <li><a href="#" style="color:#ff9800;text-decoration:none;">Наш транспорт</a></li>
+                <li><a href="#" style="color:#ff9800;text-decoration:none;">Блог</a></li>
+                <li><a href="#" style="color:#ff9800;text-decoration:none;">Відгуки</a></li>
+                <li><a href="#" style="color:#ff9800;text-decoration:none;">Угода користувача</a></li>
+              </ul>
+            </div>
+            <div class="col-md-4">
+              <h2 class="fw-bold mb-3" style="font-size:2.5rem;">Ми в соціальних мережах</h2>
+              <p style="font-size:1.15rem;">Готуєтеся до переїзду? Приєднуйтесь, щоб отримати цінні поради.</p>
+              <div class="d-flex align-items-center gap-3 mt-3">
+                <a href="#" aria-label="Facebook" style="color:#fff;font-size:2.8rem;"><i class="bi bi-facebook"></i><svg width="40" height="40" fill="#fff" viewBox="0 0 24 24"><path d="M22.675 0h-21.35C.595 0 0 .592 0 1.326v21.348C0 23.408.595 24 1.325 24h11.495v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.797.143v3.24l-1.918.001c-1.504 0-1.797.715-1.797 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116C23.406 24 24 23.408 24 22.674V1.326C24 .592 23.406 0 22.675 0"/></svg></a>
+                <a href="#" aria-label="Instagram" style="color:#fff;font-size:2.8rem;"><i class="bi bi-instagram"></i><svg width="40" height="40" fill="#fff" viewBox="0 0 24 24"><path d="M12 2.163c3.204 0 3.584.012 4.85.07 1.366.062 2.633.334 3.608 1.308.974.974 1.246 2.241 1.308 3.608.058 1.266.069 1.646.069 4.85s-.012 3.584-.07 4.85c-.062 1.366-.334 2.633-1.308 3.608-.974.974-2.241 1.246-3.608 1.308-1.266.058-1.646.069-4.85.069s-3.584-.012-4.85-.07c-1.366-.062-2.633-.334-3.608-1.308-.974-.974-1.246-2.241-1.308-3.608C2.175 15.647 2.163 15.267 2.163 12s.012-3.584.07-4.85c.062-1.366.334-2.633 1.308-3.608C4.515 2.497 5.782 2.225 7.148 2.163 8.414 2.105 8.794 2.163 12 2.163zm0-2.163C8.741 0 8.332.012 7.052.07 5.771.128 4.659.334 3.678 1.315c-.98.98-1.187 2.092-1.245 3.373C2.012 5.668 2 6.077 2 12c0 5.923.012 6.332.07 7.612.058 1.281.265 2.393 1.245 3.373.98.98 2.092 1.187 3.373 1.245C8.332 23.988 8.741 24 12 24s3.668-.012 4.948-.07c1.281-.058 2.393-.265 3.373-1.245.98-.98 1.187-2.092 1.245-3.373.058-1.28.07-1.689.07-7.612 0-5.923-.012-6.332-.07-7.612-.058-1.281-.265-2.393-1.245-3.373-.98-.98-2.092-1.187-3.373-1.245C15.668.012 15.259 0 12 0zm0 5.838a6.162 6.162 0 1 0 0 12.324 6.162 6.162 0 0 0 0-12.324zm0 10.162a3.999 3.999 0 1 1 0-7.998 3.999 3.999 0 0 1 0 7.998zm6.406-11.845a1.44 1.44 0 1 0 0 2.88 1.44 1.44 0 0 0 0-2.88z"/></svg></a>
+                <a href="#" aria-label="YouTube" style="color:#fff;font-size:2.8rem;"><i class="bi bi-youtube"></i><svg width="48" height="40" fill="#fff" viewBox="0 0 48 40"><path d="M47.5 6.5s-.5-3.3-2-4.8c-1.9-2-4-2-5-2.1C34.2 0 24 0 24 0h-.1s-10.2 0-16.5.6c-1 .1-3.1.1-5 2.1-1.5 1.5-2 4.8-2 4.8S0 10.2 0 13.9v2.2c0 3.7.5 7.4.5 7.4s.5 3.3 2 4.8c1.9 2 4.4 1.9 5.5 2.1C13.8 32 24 32 24 32s10.2 0 16.5-.6c1-.1 3.1-.1 5-2.1 1.5-1.5 2-4.8 2-4.8s.5-3.7.5-7.4v-2.2c0-3.7-.5-7.4-.5-7.4zM19 23.5V10.5l13 6.5-13 6.5z"/></svg></a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </footer>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
   </body>
